--- a/cmd/data-viz/assets/html/index.html
+++ b/cmd/data-viz/assets/html/index.html
@@ -41,6 +41,7 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
@@ -52,9 +53,10 @@
         </header>
         <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
             <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-                <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Algorithm Details</a>
+                <a class="mdl-navigation__link" href="https://en.wikipedia.org/wiki/Bully_algorithm">
+                    <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Algorithm Details
+                </a>
                 <div class="mdl-layout-spacer"></div>
-                <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
             </nav>
         </div>
 
